// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorSummary all matches snapshot 1`] = `
<ErrorSummary
  ariaLabelledBy="error-summary-title"
  className=""
  dataModule="error-summary"
  description="Optional description of the errors and how to correct them"
  role="alert"
  style={Object {}}
  title="This is a problem"
>
  <div
    aria-labelledby="error-summary-title"
    className="nhsuk-error-summary"
    data-module="error-summary"
    role="alert"
    style={Object {}}
    tabIndex="-1"
  >
    <h2
      className="nhsuk-error-summary__title"
    >
      This is a problem
    </h2>
    <div
      className="nhsuk-error-summary__body"
    >
      <p>
        Optional description of the errors and how to correct them
      </p>
      <ul
        className="nhsuk-list nhsuk-error-summary__list"
      >
        <ErrorItem
          className=""
          href="#example-error-1"
          onClick={[Function]}
          style={Object {}}
        >
          <li
            className=""
            style={Object {}}
          >
            <a
              href="#example-error-1"
              onClick={[Function]}
            >
              Link to error with explanation
            </a>
          </li>
        </ErrorItem>
        <ErrorItem
          className=""
          href="#example-error-2"
          onClick={[Function]}
          style={Object {}}
        >
          <li
            className=""
            style={Object {}}
          >
            <a
              href="#example-error-2"
              onClick={[Function]}
            >
              Link to error with explanation
            </a>
          </li>
        </ErrorItem>
      </ul>
    </div>
  </div>
</ErrorSummary>
`;

exports[`ErrorSummary doesn't render description or title when not provided 1`] = `
<ErrorSummary
  ariaLabelledBy="error-summary-title"
  className=""
  dataModule="error-summary"
  description=""
  role="alert"
  style={Object {}}
>
  <div
    aria-labelledby="error-summary-title"
    className="nhsuk-error-summary"
    data-module="error-summary"
    role="alert"
    style={Object {}}
    tabIndex="-1"
  >
    <h2
      className="nhsuk-error-summary__title"
    />
    <div
      className="nhsuk-error-summary__body"
    >
      <ul
        className="nhsuk-list nhsuk-error-summary__list"
      >
        <ErrorItem
          className=""
          href="#example-error-1"
          onClick={[Function]}
          style={Object {}}
        >
          <li
            className=""
            style={Object {}}
          >
            <a
              href="#example-error-1"
              onClick={[Function]}
            >
              Link to error with explanation
            </a>
          </li>
        </ErrorItem>
        <ErrorItem
          className=""
          href="#example-error-2"
          onClick={[Function]}
          style={Object {}}
        >
          <li
            className=""
            style={Object {}}
          >
            <a
              href="#example-error-2"
              onClick={[Function]}
            >
              Link to error with explanation
            </a>
          </li>
        </ErrorItem>
      </ul>
    </div>
  </div>
</ErrorSummary>
`;

exports[`ErrorSummary item matches snapshot 1`] = `
<li
  className=""
  style={Object {}}
>
  <a
    href="#"
    onClick={[Function]}
  >
    Error item
  </a>
</li>
`;
